Fixed: vertical alignment of background image tower: https://tower.im/projects/17ce1bc3f1f14999931c914377f5af62/todos/1891866c8f3c475e8bc173cb2d437260/

--- a/resources/installer/css/part.css
+++ b/resources/installer/css/part.css
@@ -1,6 +1,6 @@
 .PartTitleMode {
     background:url("../images/mode.png") no-repeat;
-    background-position:10px 0;
+    background-position:10px 2px;
     margin-right:20px;
 }
 
